Fix Safari text wrap issue seen, slightly lengthen inning end transition

--- a/app/modules/gamePlay/styles/gamePlay.less
+++ b/app/modules/gamePlay/styles/gamePlay.less
@@ -523,7 +523,7 @@
 			.outs-before-play {
 				height: 10px;
 				padding-top: 7px;
-				margin-left: 10px;
+				margin-left: 8px;
 			}
 
     		.play-spacing {
